<resources>
    <string name="app_name">Self</string>
    <string name="titleText">Self.Gratitude.Journal</string>
    <string name="grateful_text">What are you grateful for today?</string>
    <string name="get_started">GET STARTED</string>
    <string name="email_hint">Email</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="username_hint">Username</string>
    <string name="title">Title</string>
    <string name="thoughts">Your Thoughts</string>
    <string name="save_button">SAVE</string>
    <string name="your_thoughts">Your Thoughts!</string>
    <string name="menu_title">Add Thoughts</string>
    <string name="signout">Signout</string>
    <string name="no_thoughts_hint">Write a Journal Entry by clicking the \"+\" icon</string>
</resources>