<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/gradient_bg"
    android:padding="16dp"
    tools:context=".LoginActivity">

        <ProgressBar
            android:id="@+id/login_progress"
            style="?android:attr/progressBarStyleLarge"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <AutoCompleteTextView
                android:id="@+id/email"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:maxLines="1"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/password"
                android:hint="@string/password"
                android:layout_marginTop="16dp"
                android:maxLines="1"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/email_sign_in_button"
                android:textColor="@color/design_default_color_primary_dark"
                android:text="@string/login"
                android:background="@android:color/transparent"
                android:gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="Or"
                android:textStyle="bold"
                android:textSize="18sp"
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/create_account_button_login"
                android:textColor="@color/design_default_color_primary_dark"
                android:text="@string/create_account"
                android:background="@android:color/transparent"
                android:gravity="center_horizontal"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


        </LinearLayout>

</LinearLayout>